--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome to Index Page!</title>
+	<title>Take A Hike Index!</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-	<h1>Hello From index</h1>
-	<a href="/auth/facebook">Login with facebook</a>
+	<% include header%>
 </body>
 </html>
