added style.ejs to reuse it in another views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Take A Hike Index!</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<% include style%>
 </head>
 <body>
 	<% include header%>
