finished index page cover

--- a/views/indexCover.ejs
+++ b/views/indexCover.ejs
@@ -1,4 +1,8 @@
 <div class="container-fluid index-cover">
 	<div class="row">
+		<div class="col-md-12 text-center">
+			<a class="btn btn-success btn-cog btn-lg" href="">Find The Perfect Hike
+			</a>		
+		</div>
 	</div>
 </div>
