--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,19 @@ body{
   color: #D07258;
 }
 
+.btn-cog{
+	margin-top: 30%;
+	width: 25%;
+	height: 20%;
+	background: #D07258;
+	border: 0px;
+}
+
+.btn-cog:hover{
+	background: #D07258;
+	border: 0px;
+}
+
 .index-cover{
 	height: 500px;
 	background: url('https://images.unsplash.com/photo-1420582282039-a6d11404cb66?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=9d7c41ec56079e595ca86ee5f8d77362');
