--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,12 @@ body{
 	background: url('https://images.unsplash.com/photo-1420582282039-a6d11404cb66?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=9d7c41ec56079e595ca86ee5f8d77362');
 	background-size: cover;
 }
+
+.footer {
+   background: #3B4F53;
+   color: white;
+   height: 50px;
+}
+.footer > div> div>p{
+	margin-top: 15px;
+}
