--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
 
         <div class="navbar-header">
             <a class="navbar-brand" href="/authors" id="navBarBrand">
-                <span class="glyphicon glyphicon glyphicon-book"></span>
+                <span class="fa fa-map-marker"></span>
                 Take a Hike!
             </a>
         </div>
