--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="/authors" id="navBarBrand">
+            <a class="navbar-brand" href="/" id="navBarBrand">
                 <span class="fa fa-map-marker"></span>
                 Take a Hike!
             </a>
@@ -10,7 +10,7 @@
 
         <ul class="nav navbar-nav navbar-right" id="navBarItems">
             <li><a href="/">Find A hike</a></li>
-            <li><a href="/auth/facebook">Sign In</a></li>
+            <li><a href="/signin">Sign In</a></li>
         </ul>
       
     </div>
