--- a/assets/css/signinStyle.css
+++ b/assets/css/signinStyle.css
@@ -13,27 +13,36 @@
 	color: #A0A9AE;
 }
 
+#table-center{
+
+}
+
+form{
+	width: 40%;
+	margin: 0 auto !important;
+	float: none !important;
+	color: #EEEFF7;
+	padding: 10%;
+}
+
+
+body{
+	background: url('https://images.unsplash.com/photo-1420582282039-a6d11404cb66?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=9d7c41ec56079e595ca86ee5f8d77362');
+	background-size: cover;
+}
+.sign-form > div{
+	background: rgba(1,1,1,0.4);
+}
+
+#table-center > tr:hover{
+	background-color: #31353D;
+}
+
 .fa-cog {
   color: #D07258;
 }
 
-.index-cover{
-	height: 500px;
-	background: url('https://images.unsplash.com/photo-1420582282039-a6d11404cb66?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=9d7c41ec56079e595ca86ee5f8d77362');
-	background-size: cover;
-}
-.index-cover >div > div >.btn-cog{
-	margin-top: 30%;
-	width: 25%;
-	height: 20%;
-	background: #D07258;
-	border: 0px;	
-}
 
-.index-cover > div > div>.btn-cog:hover{
-	background: #D07258;
-	border: 0px;
-}
 .btn-cog{
 	background: #D07258;
 	border: 0px;
@@ -46,8 +55,4 @@
 }
 .footer > div> div>p{
 	margin-top: 15px;
-}
-
-body { 
-	padding-bottom: 900px;
 }
