--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,7 @@
-<div class="container-fluid footer text-center">
-	<div class="row">
-		<div><p>Copy Rights Halah & Lissa </p></div>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  	<div class="container-fluid footer text-center">
+		<div class="row">
+			<div><p>Copy Rights Halah & Lissa </p></div>
+		</div>
 	</div>
-</div>
+</nav>
