--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 	<title>Take A Hike Index!</title>
 	<% include style%>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 	<% include header%>
