--- a/views/signin/signin.ejs
+++ b/views/signin/signin.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title>Sign In</title>
 	<% include ../style%>
+	<link rel="stylesheet" type="text/css" href="/css/signinStyle.css">
 </head>
 <body>
 	<% include ../header%>
