--- a/views/signin/signinForm.ejs
+++ b/views/signin/signinForm.ejs
@@ -15,6 +15,15 @@
 
 					<button type="submit" class="btn btn-danger btn-cog btn-block">Sign in
 			    	</button>
+
+			    	<br>
+			    	<div class="text-center">
+			    		<h4> Or</h4>
+			    	</div>
+			    	<br>
+			    	<a class="btn btn-primary btn-block" href="/auth/facebook">Sign in With Facebook
+			    	</a>
+
 				</form>	
 			</div>
 		</div>
