styled signin/up forms

--- a/views/signin/signinForm.ejs
+++ b/views/signin/signinForm.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-		<div class="col-md-12 sign-form">
+		<div class="sign-form">
 			<div>
 				<form method="POST" action="/user">
 					<div class="form-group">
@@ -23,7 +23,11 @@
 			    	<br>
 			    	<a class="btn btn-primary btn-block" href="/auth/facebook">Sign in With Facebook
 			    	</a>
-
+			    	<br>
+			    	<br>
+			    	<div class="text-center sign-link">
+			    		<a href="/signup">Not a user? Sign Up!</a>
+			    	</div>
 				</form>	
 			</div>
 		</div>
