--- a/views/signup/signupForm.ejs
+++ b/views/signup/signupForm.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-		<div class="col-md-12 sign-form">
+		<div class="sign-form">
 			<div>
 				<form method="POST" action="/user">
 					<div class="form-group">
