--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   	<div class="container-fluid footer text-center">
 		<div class="row">
-			<div><p>Copy Rights Halah & Lissa </p></div>
+			<div><p>Copy Rights © 2016 | Halah & Lissa </p></div>
 		</div>
 	</div>
 </nav>
