--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<% include ../header%>
-	
+	<% if (errorMessage) {%>
+		<label> <%= errorMessage %> </label>
+
+	<%}%>
+
 	<% include signupForm%>
 	
 	<% include ../footer%>
