--- a/views/signup/signupForm.ejs
+++ b/views/signup/signupForm.ejs
@@ -2,7 +2,7 @@
     <div class="row">
 		<div class="sign-form">
 			<div>
-				<form method="POST" action="/user">
+				<form method="POST" action="/signup">
 					<div class="form-group">
 						<label>Email</label>
 						<input class="form-control" type="text" name="email" id="email">
@@ -15,9 +15,6 @@
 
 					<button type="submit" class="btn btn-danger btn-cog btn-block">Sign Up
 			    	</button>
-
-			    	
-
 				</form>	
 			</div>
 		</div>
