--- a/views/signin/signinForm.ejs
+++ b/views/signin/signinForm.ejs
@@ -2,7 +2,7 @@
     <div class="row">
 		<div class="sign-form">
 			<div>
-				<form method="POST" action="/user">
+				<form method="POST" action="/signin">
 					<div class="form-group">
 						<label>Email</label>
 						<input class="form-control" type="text" name="email" id="email">
