--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,7 +10,7 @@
 
         <ul class="nav navbar-nav navbar-right" id="navBarItems">
             <li><a href="/">Find A hike</a></li>
-            <li><a href="/signin">Sign In</a></li>
+            <li><a href="/auth/signin">Sign In</a></li>
         </ul>
       
     </div>
