--- a/views/signin/signinForm.ejs
+++ b/views/signin/signinForm.ejs
@@ -2,7 +2,7 @@
     <div class="row">
 		<div class="sign-form">
 			<div>
-				<form method="POST" action="/signin">
+				<form method="POST" action="/auth/signin">
 					<div class="form-group">
 						<label>Email</label>
 						<input class="form-control" type="text" name="email" id="email">
@@ -26,7 +26,7 @@
 			    	<br>
 			    	<br>
 			    	<div class="text-center sign-link">
-			    		<a href="/signup">Not a user? Sign Up!</a>
+			    		<a href="/auth/signup">Not a user? Sign Up!</a>
 			    	</div>
 				</form>	
 			</div>
