--- a/views/signup/signupForm.ejs
+++ b/views/signup/signupForm.ejs
@@ -2,7 +2,7 @@
     <div class="row">
 		<div class="sign-form">
 			<div>
-				<form method="POST" action="/signup">
+				<form method="POST" action="/auth/signup">
 					<div class="form-group">
 						<label>Email</label>
 						<input class="form-control" type="text" name="email" id="email">
