--- a/views/homeHeader.ejs
+++ b/views/homeHeader.ejs
@@ -10,7 +10,7 @@
 
         <ul class="nav navbar-nav navbar-right" id="navBarItems">
             <li><a href="/">Find A hike</a></li>
-            <li><a href="/auth/signin">Sign Out</a></li>
+            <li><a href="/auth/logout">Sign Out</a></li>
         </ul>
       
     </div>
