displayed user display name from facebook on users/user page

--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -17,7 +17,7 @@
 					<img src="" class="user-profile-placeholder img-rounded center-block">
 					<br>
 					<div class="jumbotron">
-						<h4>User Name</h4>
+						<h4><%=user.displayName%></h4>
 					  	<p> <small>
 					  	  Microdosing tilde flexitarian, meggings franzen tousled etsy biodiesel quinoa. Cold-pressed cray retro authentic. Listicle humblebrag hoodie roof party, bicycle rights asymmetrical you probably haven't heard of them.
 					  	  </small>
