displayed user profile picture in users page

--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="col-md-3">
-					<img src="" class="user-profile-placeholder img-rounded center-block">
+					<img src="<%=photo%>" class="user-profile-placeholder img-rounded center-block">
 					<br>
 					<div class="jumbotron">
 						<h4><%=user.displayName%></h4>
