fixed users routes + added new user page

--- a/assets/css/userProfileStyle.css
+++ b/assets/css/userProfileStyle.css
@@ -4,6 +4,9 @@
 	background: #D07258;
 	border: 0px;
 }
+.user-profile-placeholder:hover{
+	background: rgba(208,114,88,0.8);
+}
 
 .user-profile-weather{
 	width: 100%;
