added input file to new users page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,9 @@
 	background: #D07258;
 	border: 0px;
 }
-
+.btn-cog:hover{
+	background: #3B4F53;
+}
 .footer {
    background: #3B4F53;
    color: white;
