--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -14,8 +14,15 @@
 	<div class="container">
 	    <div class="row">
 	    	<div class="col-md-12">
+	    	<form method="POST" action="/users">
 	    		<div class="col-md-3">
-					<img src="" class="user-profile-placeholder img-rounded center-block">
+	    			<div class="form-group">
+	    				<img src="" class="user-profile-placeholder img-rounded center-block">
+						<br>
+						
+	    			</div>
+					    <input type="file" id="photo" name="photo">
+
 				</div>
 				<div class="col-md-9">
 	    			<div class="">
