linked to weather api

--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -25,7 +25,9 @@
 					</div>
 				</div>
 				<div class="col-md-9">
-					<img src="https://images.unsplash.com/photo-1445308394109-4ec2920981b1?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=37943d3b5c2a6a6401b5c9b9f0c60a68" class="user-profile-weather img-rounded center-block">
+					<div class="user-profile-weather img-rounded center-block">
+						<a href="/weather"> weather</a>
+					</div>
 					<br>
 					<div class="jumbotron">
 					  	<h4> List of Favorite Hikes!</h4>
