--- a/views/signup/signupForm.ejs
+++ b/views/signup/signupForm.ejs
@@ -3,6 +3,11 @@
 		<div class="sign-form">
 			<div>
 				<form method="POST" action="/auth/signup">
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input class="form-control" type="text" name="name" id="name">
+                    </div>
+
 					<div class="form-group">
 						<label>Email</label>
 						<input class="form-control" type="text" name="email" id="email">
@@ -15,7 +20,7 @@
 
 					<button type="submit" class="btn btn-danger btn-cog btn-block">Sign Up
 			    	</button>
-				</form>	
+				</form>
 			</div>
 		</div>
 	</div>
