displayed weather and temp on hikes page

--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -21,7 +21,11 @@
 					<div class="jumbotron">
 						<%if(currentWeather){ %>
 							<p>
-						  		<%= currentWeather %>
+						  		<%= currentWeather.weather[0].main %>
+							</p>
+							<p>
+							  	<%= currentWeather.main.temp %>
+
 							</p>
 						<%}%>
 						
