Checked for password validity on signin

--- a/views/signin/signin.ejs
+++ b/views/signin/signin.ejs
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<% include ../header%>
-	
+	<%= errorMessage %>
 	<% include signinForm%>
-	
+
 	<% include ../footer%>
 </body>
 </html>
