working on cookies

--- a/views/signin/signin.ejs
+++ b/views/signin/signin.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<% include ../header%>
-	<%= errorMessage %>
+	<h2><%= errorMessage %></h2>
 	<% include signinForm%>
 
 	<% include ../footer%>
