--- a/views/signin/signinForm.ejs
+++ b/views/signin/signinForm.ejs
@@ -10,7 +10,7 @@
 
 					<div class="form-group">
 	                    <label>Password</label>
-	                    <input class="form-control" type="text" name="password" id="password">
+	                    <input class="form-control" type="password" name="password" id="password">
 	                </div>
 
 					<button type="submit" class="btn btn-danger btn-cog btn-block">Sign in
@@ -28,7 +28,7 @@
 			    	<div class="text-center sign-link">
 			    		<a href="/auth/signup">Not a user? Sign Up!</a>
 			    	</div>
-				</form>	
+                </form>
 			</div>
 		</div>
 	</div>
