Creates a list router

--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -31,7 +31,7 @@
 					<br>
 					<div class="jumbotron">
 					  	<h4> List of Favorite Hikes!</h4>
-                        <form action="/users/list/new" method="post">
+                        <form action="/list/new" method="post">
                             <div class="form-group">
                                 <input type="test" name="list" value="">
                                 <input type="submit" name="sumbit" value="Create a new list">
