--- a/views/hikes/hikes.ejs
+++ b/views/hikes/hikes.ejs
@@ -5,11 +5,18 @@
         <title>Favorite Hikes</title>
         <% include ../style%>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <link rel="stylesheet" type="text/css" href="/css/hikeStyle.css">
     </head>
     <body>
         <% include ../header%>
 
-        <h3> <%= list_name %> </h3>
+        <div class="container-fluid">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h3> Hikes in your <%= list_name %> list</h3>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
 
         <% include ../footer%>
     </body>
