Added a description route

--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -18,6 +18,9 @@
 					<br>
 					<div class="jumbotron">
 						<h4><%=user.displayName%></h4>
+                        <p>
+                            <%= description %>
+                        </p>
                         <a href="/users/description">Edit your description</a>
 					  	<!-- <p> <small>
 					  	  Microdosing tilde flexitarian, meggings franzen tousled etsy biodiesel quinoa. Cold-pressed cray retro authentic. Listicle humblebrag hoodie roof party, bicycle rights asymmetrical you probably haven't heard of them.
