--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -5,6 +5,18 @@
 	<% include ../style%>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link rel="stylesheet" type="text/css" href="/css/userProfileStyle.css">
+	<script src="http://maps.googleapis.com/maps/api/js"></script>
+	<script>
+	function initialize() {
+	  var mapProp = {
+	    center:new google.maps.LatLng(51.508742,-0.120850),
+	    zoom:5,
+	    mapTypeId:google.maps.MapTypeId.ROADMAP
+	  };
+	  var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+	}
+	google.maps.event.addDomListener(window, 'load', initialize);
+	</script>
 </head>
 </head>
 <body>
@@ -17,18 +29,31 @@
 			<div class="col-md-12">
 				<div class="col-md-8">
 					<!-- insert map here -->
+					
 					<div class="jumbotron">
-						<%if(currentWeather){ %>
-							<p>
-						  		<%= currentWeather.weather[0].main %>
-							</p>
-							<p>
-							  	<%= currentWeather.main.temp %>
+						<div class="col-md-4">
+							<i class="fa fa-sun-o fa-cog fa-5x"></i>
 
-							</p>
-						<%}%>
-						
+						</div>
+
+						<div class="col-md-8">
+							<%if(currentWeather){ %>
+								<p>
+							  	<%= currentWeather.weather[0].main %>
+								</p>
+								<p>
+								 	<small> 	
+								 		<%= currentWeather.main.temp %>
+								 	</small>	
+								</p>
+							<%}%>
+						</div>
+
+						<br>
+						<br>
+						<br>
 					</div>
+					<div id="googleMap" style="width:100%;height:380px;"></div>
 				</div>
 				<div class="col-md-4">
 				<div class="jumbotron">
@@ -62,14 +87,18 @@
 						<button type="submit" class="btn btn-danger btn-cog btn-block">Find Me A Hike
 					   	</button>
 
+					   	<br>
+						<%if(searchResults){%>
+							<%searchResults.forEach(function(result){%>
+								<p> <small><%= result.name %> </small></p>
+								<p> <small><%= result.longitude %> </small></p>
+								<p> <small><%= result.latitude %> </small></p>
+
+							<%})%>
+						<%}%>
 					</form>
 				</div>
-					<br>
-					<%if(searchResults){%>
-						<%searchResults.forEach(function(result){%>
-							<p><%= result.name %></p>
-						<%})%>
-					<%}%>
+					
 
 				</div>
 			</div>
