--- a/views/users/description.ejs
+++ b/views/users/description.ejs
@@ -16,9 +16,9 @@
         			<div>
                         <h3>Update your user description:</h3>
                         <br>
-        				<form method="POST" action="/auth/signin">
+        				<form method="POST" action="/users/edit">
         					<div class="form-group">
-        						<textarea name="name" rows="8" cols="81">Update here</textarea>
+        						<textarea name="name" rows="8" cols="81"> <%= user.description %> </textarea>
         					</div>
         					<button type="submit" class="btn btn-danger btn-cog btn-block">Update
         			    	</button>
