--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -7,14 +7,28 @@
 	<link rel="stylesheet" type="text/css" href="/css/userProfileStyle.css">
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
 	<script>
-	function initialize() {
-	  var mapProp = {
-	    center:new google.maps.LatLng(51.508742,-0.120850),
-	    zoom:5,
-	    mapTypeId:google.maps.MapTypeId.ROADMAP
-	  };
-	  var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-	}
+function initialize() { 
+		var center = new google.maps.LatLng(47.620499,-122.350876);
+	  	var mapProp = {
+		    center:center,
+		    zoom:5,
+		    mapTypeId:google.maps.MapTypeId.ROADMAP
+	  	};
+
+	  	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+	  	var marker=new google.maps.Marker({
+  			position:center,
+  		});
+
+		marker.setMap(map);
+		var infowindow = new google.maps.InfoWindow({
+  			content:"You're here!"
+  		});
+
+		infowindow.open(map,marker);
+		 var locations = [];
+	}	
 	google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
 </head>
@@ -27,9 +41,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="col-md-8">
-					<!-- insert map here -->
-					
+				<div class="col-md-8">					
 					<div class="jumbotron">
 						<div class="col-md-4">
 							<i class="fa fa-sun-o fa-cog fa-5x"></i>
@@ -88,11 +100,11 @@
 					   	</button>
 
 					   	<br>
+
 						<%if(searchResults){%>
 							<%searchResults.forEach(function(result){%>
 								<p> <small><%= result.name %> </small></p>
-								<p> <small><%= result.longitude %> </small></p>
-								<p> <small><%= result.latitude %> </small></p>
+								<a href="" class="btn btn-danger btn-cog">Favourite</a>
 
 							<%})%>
 						<%}%>
