Dropped tables and edited migrations

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,9 +9,9 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right" id="navBarItems">
-            <li><a href="/">Find A hike</a></li>
+            <li><a href="/hikes">Find A hike</a></li>
             <li><a href="/auth/signin">Sign In</a></li>
         </ul>
-      
+
     </div>
 </nav>
