--- a/views/hikes/hikes.ejs
+++ b/views/hikes/hikes.ejs
@@ -14,6 +14,15 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <h3> Hikes in your <%= list_name %> list</h3>
+                <table>
+                    <% hikes.forEach(function(hike) { %>
+                        <tr>
+                            <td>
+                                <a href="<%= hike.hike_url %>"><%= hike.hike_url %></a>
+                            </td>
+                        </tr>
+                    <% }) %>
+                </table>
             </div>
             <div class="col-md-3"></div>
         </div>
