--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/userProfileStyle.css">
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
 	<script>
-function initialize() { 
+function initialize() {
 		var center = new google.maps.LatLng(47.620499,-122.350876);
 	  	var mapProp = {
 		    center:center,
@@ -28,7 +28,7 @@ function initialize() {
 
 		infowindow.open(map,marker);
 		 var locations = [];
-	}	
+	}
 	google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
 </head>
@@ -41,7 +41,7 @@ function initialize() {
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="col-md-8">					
+				<div class="col-md-8">
 					<div class="jumbotron">
 						<div class="col-md-4">
 							<i class="fa fa-sun-o fa-cog fa-5x"></i>
@@ -54,9 +54,9 @@ function initialize() {
 							  	<%= currentWeather.weather[0].main %>
 								</p>
 								<p>
-								 	<small> 	
+								 	<small>
 								 		<%= currentWeather.main.temp %>
-								 	</small>	
+								 	</small>
 								</p>
 							<%}%>
 						</div>
@@ -85,7 +85,7 @@ function initialize() {
 							  	<option>Hard</option>
 							</select>
 						</div>
-						
+
 						<div class="form-group">
 							<label for="zipcode">Zipcode</label>
 							<input type="text" class="form-control"name="zipcode" id="zipcode">
@@ -104,13 +104,17 @@ function initialize() {
 						<%if(searchResults){%>
 							<%searchResults.forEach(function(result){%>
 								<p> <small><%= result.name %> </small></p>
-								<a href="" class="btn btn-danger btn-cog">Favourite</a>
+                                <form action="/users/favourite" method="post">
+                                    <input type="hidden" name="hiddenName" value="<%= result.name %>">
+                                    <input type="submit" class="btn btn-danger btn-cog" name="name" value="Favorite">
+                                </form>
+								<!-- <a href="" class="btn btn-danger btn-cog">Favourite</a> -->
 
 							<%})%>
 						<%}%>
 					</form>
 				</div>
-					
+
 
 				</div>
 			</div>
