--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -81,7 +81,7 @@ function initialize() {
 
 							<select class="form-control" name="elevation" id="elevation">
 							  	<option>Easy</option>
-							  	<option>Meduim</option>
+							  	<option>Medium</option>
 							  	<option>Hard</option>
 							</select>
 						</div>
