--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -6,31 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link rel="stylesheet" type="text/css" href="/css/userProfileStyle.css">
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
-	<script>
-function initialize() { 
-		var center = new google.maps.LatLng(47.620499,-122.350876);
-	  	var mapProp = {
-		    center:center,
-		    zoom:5,
-		    mapTypeId:google.maps.MapTypeId.ROADMAP
-	  	};
-
-	  	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-	  	var marker=new google.maps.Marker({
-  			position:center,
-  		});
-
-		marker.setMap(map);
-		var infowindow = new google.maps.InfoWindow({
-  			content:"You're here!"
-  		});
-
-		infowindow.open(map,marker);
-		 var locations = [];
-	}	
-	google.maps.event.addDomListener(window, 'load', initialize);
-	</script>
+	
 </head>
 </head>
 <body>
@@ -66,6 +42,52 @@ function initialize() {
 						<br>
 					</div>
 					<div id="googleMap" style="width:100%;height:380px;"></div>
+					<script>
+	var locations = "<%= searchResults %>";
+	console.log(locations);
+
+	// function initialize() { 
+		var center = new google.maps.LatLng(47.620499,-122.350876);
+	  	var mapProp = {
+		    center:center,
+		    zoom:5,
+		    mapTypeId:google.maps.MapTypeId.ROADMAP
+	  	};
+
+	  	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+	  	var marker=new google.maps.Marker({
+  			position:center,
+  		});
+
+		marker.setMap(map);
+		var infowindow = new google.maps.InfoWindow({
+  			content:"You're here!"
+  		});
+
+		infowindow.open(map,marker);
+		 var locations = [];
+
+		 var infowindow = new google.maps.InfoWindow();
+
+        var marker, i;
+
+        for (i = 0; i < locations.length; i++) {
+          marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i].latitdue, locations[i].longitude),
+            map: map
+          });
+
+          google.maps.event.addListener(marker, 'click', (function(marker, i) {
+            return function() {
+              infowindow.setContent(locations[i].name);
+              infowindow.open(map, marker);
+            }
+          })(marker, i));
+        }
+	// }	
+	// google.maps.event.addDomListener(window, 'load', initialize);
+	</script>
 				</div>
 				<div class="col-md-4">
 				<div class="jumbotron">
